feat: 实现自动填充注解和分页查询重构
refactor: 重构各模块的分页查询接口，使用统一的查询请求对象

feat(domain): 为实体类添加AutoFill注解实现自动填充

feat(mapper): 为各Mapper添加基于请求对象的分页查询方法

feat(service): 实现基于请求对象的分页查询服务

feat(controller): 更新控制器使用新的分页查询接口

fix: 修正UserMapper.xml中的参数名错误

chore: 添加pagehelper依赖和数据库更新脚本

style: 清理操作日志文件内容

feat(ui): 修改request工具类的参数传递方式

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
+        <pagehelper.version>1.4.6</pagehelper.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -157,6 +158,12 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>${commons-codec.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
             </dependency>
 
             <!-- Test -->
